# mise_en_place

./: .gitignore  dashboard.py  pins_this_week.py  pyproject.toml  reddit.py  text_writer.py  todo.py
tests/: def test_basic_task():.py
